tests/ui/internal-attr-is-forbidden.stderr
error: remove bitsize_internal
  --> tests/ui/internal-attr-is-forbidden.rs:10:1
   |
10 | #[bitsize_internal]
   | ^^^^^^^^^^^^^^^^^^^
   |
   = help: attribute bitsize_internal can only be applied internally by the bitsize macros

error: remove bitsize_internal
  --> tests/ui/internal-attr-is-forbidden.rs:14:1
   |
14 | #[bitsize_internal]
   | ^^^^^^^^^^^^^^^^^^^
   |
   = help: attribute bitsize_internal can only be applied internally by the bitsize macros

error: expected derive macro, found derive helper attribute `bitsize_internal`
  --> tests/ui/internal-attr-is-forbidden.rs:21:20
   |
21 | #[derive(FromBits, bitsize_internal)]
   |                    ^^^^^^^^^^^^^^^^ not a derive macro
